kube/app/towers-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: towers
  name: towers
spec:
  replicas: 1
  selector:
    matchLabels:
      app: towers
  strategy: {}
  template:
    metadata:
      labels:
        app: towers
    spec:
      containers:
        - image: oliverflecke/london-towers:latest
          imagePullPolicy: Never
          name: towers
          resources:
            limits:
              memory: 1Gi
              cpu: "1"
