kube/app/towers-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: towers-service
spec:
  type: NodePort
  selector:
    app: towers
  ports:
    - port: 3000
